// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> overrides the theming props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  text-transform: uppercase;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  color: #D53F8C;
  box-shadow: inset 0 0 0px 1px #D53F8C;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`<Badge /> renders with default theming 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  text-transform: uppercase;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  background: #EDF2F7;
  color: #1A202C;
}

<span
    class="chakra-badge emotion-0"
  >
    Badge
  </span>
</DocumentFragment>
`;

exports[`<Box /> as - prop works correctly 1`] = `
<DocumentFragment>
  <a
    class="emotion-0"
    href="www.google.com"
  >
    This is box
  </a>
</DocumentFragment>
`;

exports[`<Box /> renders box correctly 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  >
    This is box
  </div>
</DocumentFragment>
`;

exports[`<Container /> centerContent - prop works correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: 60ch;
  padding-left: 1rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="chakra-container emotion-0"
  >
    This is centered container
  </div>
</DocumentFragment>
`;

exports[`<Container /> renders box correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: 60ch;
  padding-left: 1rem;
  padding-right: 1rem;
}

<div
    class="chakra-container emotion-0"
  >
    This is container
  </div>
</DocumentFragment>
`;

exports[`<Container /> themeing works correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: 60ch;
  padding-left: 1rem;
  padding-right: 1rem;
  background-color: #E53E3E;
}

<div
    class="chakra-container emotion-0"
  >
    This is container has a red background
  </div>
</DocumentFragment>
`;

exports[`<Divider /> overrides the theming props 1`] = `
<DocumentFragment>
  .emotion-0 {
  opacity: 0.6;
  border: 0;
  border-color: inherit;
  border-style: dashed;
  border-bottom-width: 1px;
  width: 100%;
}

<hr
    aria-orientation="horizontal"
    class="chakra-divider emotion-0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`<Divider /> renders with default theming 1`] = `
<DocumentFragment>
  .emotion-0 {
  opacity: 0.6;
  border: 0;
  border-color: inherit;
  border-style: solid;
  border-bottom-width: 1px;
  width: 100%;
}

<hr
    aria-orientation="horizontal"
    class="chakra-divider emotion-0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`<Flex /> renders all the allowed shorthand style props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
